# vanet_6g_pbc_fl_learning

./: .gitignore  README.md  VANET_FL_Authentication_Overhead_Report.tex  VANET_FL_PBC_LTE_Report.tex  VANET_LTE_3Case_Power_Latency_Report.tex  VANET_PBC_Clarification_Report.tex  VANET_Security_Stages_Report.tex
Federated-Learning-VANET/: README.md  requirements.txt  train_fl_baseline.py
overleaf_vanet_security_report/simulation_workspace/ns-allinone-3.44/ns-3.44/scratch/: vanet-security-lte.cc  vanet-security-nr.cc
overleaf_vanet_security_report/simulation_workspace/ns-allinone-3.44/ns-3.44/src/vanet-security/: CMakeLists.txt
scripts/: compare_fl_auth_overhead.py  compare_security_power_modes.py  format_fl_round_results.py  format_pbc_power_results.py  generate_ns2_vehicle_trace.py  run_5g_lte_1000_pbc_fl_100v.sh  run_fl_auth_overhead_compare.sh  run_nr_max_1000_pbc_fl_100v.sh  run_nr_max_1000_pbc_fl_200v.sh  run_nr_max_150.sh  run_nr_max_150_four_modes.sh  run_nr_max_150_pbc_fl.sh  run_nr_max_150_three_modes.sh  run_pbc_power_tests.sh  run_security_power_compare.sh
simulation_workspace/integration_test/: mobility_trace.tcl  mynet.net.xml  myroutes.rou.xml  routes.rou.xml  sumotrace.xml
simulation_workspace/ns-3-5g-lena/ns-3-dev/src/nr/: .gitlab-ci.yml  CHANGES.md  CMakeLists.txt  README.md  RELEASE_NOTES.md  codespell-ignored-lines
simulation_workspace/ns-3-5g-lena/ns-3-dev/src/nr/doc/: Makefile  groups.h
simulation_workspace/ns-3-5g-lena/ns-3-dev/src/nr/examples/: cttc-channel-randomness.cc  cttc-fh-compression.cc  cttc-lte-ca-demo.cc  cttc-nr-fh-xr.cc  cttc-nr-traffic-ngmn-mixed.cc  cttc-realistic-beamforming.cc  gsoc-nr-channel-models.cc  rem-beam-example.cc
simulation_workspace/ns-3-5g-lena/ns-3-dev/src/nr/helper/: nr-bearer-stats-connector.h  nr-helper.cc  nr-helper.h  nr-no-backhaul-epc-helper.cc  nr-radio-environment-map-helper.cc  nr-radio-environment-map-helper.h
simulation_workspace/ns-3-5g-lena/ns-3-dev/src/nr/model/: bandwidth-part-ue.h  bwp-manager-algorithm.cc  bwp-manager-algorithm.h  bwp-manager-gnb.cc  bwp-manager-gnb.h  bwp-manager-ue.cc  bwp-manager-ue.h  nr-a2-a4-rsrp-handover-algorithm.cc  nr-a2-a4-rsrp-handover-algorithm.h  nr-anr.h  nr-ccm-mac-sap.h  nr-ccm-rrc-sap.h  nr-common.cc  nr-component-carrier.cc  nr-control-messages.cc  nr-control-messages.h  nr-device-registry.cc  nr-device-registry.h  nr-epc-mme-application.h  nr-epc-sgw-application.cc  nr-epc-ue-nas.cc  nr-epc-x2.cc  nr-epc-x2.h  nr-gnb-component-carrier-manager.h  nr-gnb-mac.cc  nr-gnb-mac.h  nr-gnb-net-device.cc  nr-gnb-net-device.h  nr-gnb-phy.cc  nr-gnb-phy.h  nr-gnb-rrc.cc  nr-gnb-rrc.h  nr-handover-algorithm.h  nr-handover-management-sap.h  nr-lte-amc.h  nr-mac-scheduler-ns3.cc  nr-no-op-handover-algorithm.h  nr-phy-mac-common.cc  nr-phy-mac-common.h  nr-phy-sap.h  (+21 more)
simulation_workspace/ns-3-5g-lena/ns-3-dev/src/nr/test/: nr-epc-test-s1u-downlink.cc  nr-epc-test-s1u-uplink.cc  nr-ideal-beamforming-test.cc  nr-phy-patterns.cc  nr-realistic-beamforming-test.cc  nr-test-cell-selection.cc  nr-test-cell-selection.h  nr-test-deactivate-bearer.h  nr-test-epc-e2e-data.cc  nr-test-handover-delay.cc  nr-test-handover-failure.cc  nr-test-handover-target.cc  nr-test-ipv6-routing.cc  nr-test-notching.cc  nr-test-radio-link-failure.cc  nr-test-radio-link-failure.h  nr-test-ri-pmi.cc  nr-test-rlc-am-e2e.cc  nr-test-rlc-um-e2e.cc  nr-test-rlc-um-rx.cc  nr-test-rrc.cc  nr-test-sched-temporal-fairness.cc  nr-test-ue-measurements.cc  nr-test-ue-measurements.h  nr-test-x2-handover-measures.cc  nr-test-x2-handover.cc  nr-uplink-power-control-test.cc
simulation_workspace/ns-3-5g-lena/ns-3-dev/src/vanet-security/: CMakeLists.txt
simulation_workspace/ns-3-5g-lena/ns-3-dev/src/vanet-security/model/: bs-app.cc  bs-app.h  bs-relay-app.cc  bs-relay-app.h  ecc-crypto.cc  kgc-app.cc  kgc-app.h  rsu-app.cc  rsu-app.h  ta-app.cc  ta-app.h  vanet-message.cc  vanet-message.h  vanet-security.h  vanet-stats.cc  vanet-stats.h  vehicle-app.cc  vehicle-app.h
simulation_workspace/ns-allinone-3.44/: .config
simulation_workspace/ns-allinone-3.44/bake/: bakeconf.xml
simulation_workspace/ns-allinone-3.44/netanim-3.109/: CMakeLists.txt  RELEASE_NOTES.md
simulation_workspace/ns-allinone-3.44/netanim-3.109/data/: org.nsnam.NetAnim.desktop  org.nsnam.NetAnim.metainfo.xml
simulation_workspace/ns-allinone-3.44/netanim-3.109/src/: animatormode.cpp  animatormode.h  animpropertybrowser.cpp  common.h  logqt.cpp  main.cpp  netanim.cpp  packetsmode.cpp  qcustomplot.cpp  statsmode.cpp  statsmode.h  table.cpp  textbubble.cpp
simulation_workspace/ns-allinone-3.44/netanim-3.109/src/qtpropertybrowser/: qteditorfactory.cpp  qtgroupboxpropertybrowser.cpp  qtpropertymanager.cpp  qtvariantproperty.cpp
simulation_workspace/ns-allinone-3.44/ns-3.44/: .lock-ns3_linux_build  sumo-animation.xml  vanet-security-metrics-lte-confirm.csv  vanet-security-metrics-lte-smoke.csv  vanet-security-metrics-lte.csv  vanet-security-metrics-nr-max.csv  vanet-security-metrics-nr-smoke.csv  vanet-security-metrics-nr.csv  vanet-security-metrics-wifi.csv  vanet-security-metrics.csv
simulation_workspace/ns-allinone-3.44/ns-3.44/scratch/: sumo-anim.cc  vanet-security-lte.cc  vanet-security-nr.cc  vanet-security-sumo.cc
simulation_workspace/ns-allinone-3.44/ns-3.44/src/vanet-security/: CMakeLists.txt
simulation_workspace/ns-allinone-3.44/ns-3.44/src/vanet-security/model/: bs-app.cc  bs-app.h  bs-relay-app.cc  bs-relay-app.h  ecc-crypto.h  fl-vanet-apps.cc  fl-vanet-apps.h  kgc-app.cc  kgc-app.h  pbc-crypto.cc  pbc-crypto.h  rsu-app.cc  rsu-app.h  ta-app.cc  ta-app.h  vanet-message.cc  vanet-message.h  vanet-power-model.cc  vanet-power-model.h  vanet-security.h  vanet-stats.cc  vanet-stats.h  vehicle-app.cc  vehicle-app.h
vanet_ml_security_research/: VANET_Code_Report.md
vanet_ml_security_research/Vehicular_AdHoc_Networks_Simulation/: README.md  communication_terminal.py  demo.py  scenario.py  vehicle.py
vanet_ml_security_research/Vehicular_AdHoc_Networks_Simulation/CoopVANETs/: OptimizationAlg.ipynb
(+19 files in other folders)
